<resources>
    <string name="app_name">AllergyIntolerances</string>
    <string name="hello_there">Hello!</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="again">Confirm password</string>
    <string name="goback">Back</string>
    <string name="email">Email</string>
    <string name="placeholder">Placeholder</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="add_new">Add new</string>
    <string name="log_out">Log out</string>
</resources>